k8-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potapov-deployment
spec:
  selector:
    matchLabels:
      app: potapov-image
  template:
    metadata:
      labels:
        app: potapov-image
    spec:
      containers:
        - name: potapov-image
          image: sopatrin/python-cw:1.0.0
          resources:
            limits:
              memory: "64Mi"
              cpu: "50m"
          ports:
            - containerPort: 5000
