k8-service.yml
apiVersion: v1
kind: Service
metadata:
  name: potapov-service
spec:
  selector:
    app: potapov-image
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
